--- a/scss/_misc.scss
+++ b/scss/_misc.scss
@@ -26,6 +26,7 @@
   
   .nosotros-containerB {
     background: url('/img/fondox-p.jpg');
+    background-repeat: no-repeat;
     object-fit: cover;
   }
   
